<resources>
    <string name="app_name">Experiment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_COM_SCI_309">Hello COM SCI 309</string>
    <string name="Welcome_to_Bytez">Welcome to Bytez</string>
    <string name="Question">What is Bytez?</string>
    <string name="Description">Bytez is a place to write and read opinions about your local restaurants. Share your experience at your favorite place to eat, and let your friends know what is the best thing to get. Read menus, find directions, and begin reviewing. Don\'t know where to eat? Look at where your friends have been dining lately, and filter by what you are in the mood for. Bytez makes picking out a restaurant easy!</string>
    <string name="Click_to_see">Click to see who is working on the app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Front_end_team">Front End Team:</string>
    <string name="Back_end_team">Back End Team:</string>
    <string name="Noah">Noah Kelleher</string>
    <string name="Zach">Zach Eisele</string>
    <string name="Alex">Alex Freinberg</string>
    <string name="Seth">Seth Gardener</string>
</resources>